--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,21 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "aos": "^2.3.4",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "recharts": "^2.8.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
