--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.0.4",
+    "@remix-run/router": "^1.9.0",
     "@reduxjs/toolkit": "^1.9.5",
     "aos": "^2.3.4",
     "axios": "^1.5.0",
@@ -25,15 +32,19 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.16.0",
     "recharts": "^2.8.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
   }
