--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,14 @@
     "aos": "^2.3.4",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "i18next": "^23.5.1",
+    "i18next-http-backend": "^2.2.2",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
